# cpp-cmake-gtest-boilerplate

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_osx.sh  build_windows.sh  docker-compose.yml  leak_check.sh  make_bridge.sh
src/: CMakeLists.txt  bridge.cpp  bridge.h  calculator.cpp  calculator.go  calculator.h  calculator.i  calculator_wrap.cxx  library.cpp  library.h
test/: CMakeLists.txt  test_bridge.cpp  test_calculator.cpp  test_library.cpp
